@startuml
interface IEffectDispatcher {
    ResolveAsync(effect:T) : Task
}
class EffectDispatcher <<sealed>> {
    + EffectDispatcher(provider:IServiceProvider)
    + <<async>> ResolveAsync(effect:TEffect) : Task
}
IEffectDispatcher <|-- EffectDispatcher
EffectDispatcher --> "_provider" IServiceProvider
EffectDispatcher o-> "Generic" Type
@enduml
